# media-server-rs

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  build.rs
demo/: .gitattributes  Cargo.toml
demo-js/: main.js  package-lock.json  package.json
demo/resources/: index.html
demo/src/: main.rs
examples/: simple.rs
include/: bridge.h
media-server/: Cargo.toml
media-server-sys/: CMakeLists.txt  Cargo.toml  build.rs
media-server-sys/include/: bridge.h
media-server-sys/src/: bridge.cc  lib.rs  tests.rs
media-server/examples/: simple.rs
media-server/src/: lib.rs  native.rs
semantic-sdp/: .gitattributes  Cargo.toml
semantic-sdp-derive/: Cargo.toml
semantic-sdp-derive/src/: lib.rs
semantic-sdp-derive/tests/: hash_eq.rs
semantic-sdp/resources/: sdp-answer.txt  sdp-offer-chrome-rid.txt  sdp-offer-chrome-ssrc.txt  sdp-offer.txt
semantic-sdp/semantic-sdp-derive/src/: lib.rs
semantic-sdp/semantic-sdp-derive/tests/: hash_eq.rs
semantic-sdp/src/: attribute_map.rs  attribute_types.rs  attributes.rs  enums.rs  lib.rs  tests.rs  types.rs
semantic-sdp/src/sdp/: mod.rs  tests.rs
semantic-sdp/src/webrtc/: mod.rs  tests.rs
sfu/: Cargo.toml
sfu/resources/: index.html
sfu/src/: main.rs
src/: bridge.cc  lib.rs  native.rs
src/bridge/: bridge.cc  mod.rs  tests.rs
