[package]
name = "media-server-demo"
version = "0.1.0"
authors = ["Asher Baker <asherkin@limetech.io>"]
edition = "2018"

[dependencies]
media-server = { path = "../media-server" }
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "macros"] }
warp = { version = "0.2", default-features = false, features = ["websocket"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
rand = "0.7"
